--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body *{
 }
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #8396d4;
 }
 .container{
     width: 800px;
@@ -15,9 +16,27 @@ body{
 }
 .left-column{
     width: 40%;
+    height: 300px;
     float: left;
     padding: 40px;
-    background-color: tomato;
+    background-color: #008FAE;
+    background-image: url(../img/hill.png);
+    color: white;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.main-title{
+    width: 100%;
+    color: white;
+    font-size: 40px;
+    font-weight: normal;
+}
+bottom-links{
+
+}
+bottom-links > .link{
+    color: white;
 }
 .right-column{
     width: 60%;
