--- a/css/main.css
+++ b/css/main.css
@@ -1,46 +1,58 @@
-body,
-body *{
-    margin: 0;
-    padding: 0;
-    vertical-align: top;
-    box-sizing: border-box;
-}
-body{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #8396d4;
-}
-.container{
+.container {
+    display: inline-block;
     width: 800px;
     margin-top: 100px;
     margin-left: calc(50% - 400px);
+    position: relative;
 }
-.left-column{
+
+.left-column {
     width: 40%;
-    height: 300px;
-    float: left;
     padding: 40px;
-    background-color: #008FAE;
+    background-color: #008fae;
     background-image: url(../img/hill.png);
-    color: white;
-    background-repeat: no-repeat;
-    background-position: center;
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: #fff;
+    position: absolute;
+    bottom: 30px;
+    top: 30px;
+    left: 0;
 }
-.main-title{
+
+.main-title {
     width: 100%;
-    color: white;
     font-size: 40px;
     font-weight: normal;
 }
-bottom-links{
 
+.bottom-links {
+    position: absolute;
+    bottom: 20px;
+    left: 40px;
+    right: 40px;
 }
-bottom-links > .link{
-    color: white;
+
+.bottom-links > .link {
+    color: #fff;
 }
-.right-column{
+
+.right-column {
     width: 60%;
     float: right;
     padding: 60px;
-    background-color: deepskyblue;
+    background-color: #fff;
+    position: relative;
+}
+
+.close {
+    width: 60px;
+    height: 60px;
+    font-size: 30px;
+    text-align: center;
+    line-height: 54px;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
